--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -16,15 +16,66 @@ header{
         @include span-columns(6,10);
         a{
             color:white;
+            font-weight: bolder;
         }
     }
-    .connexion{
-        @include span-columns(4 omega,10);
+}
+
+.user{
+    @include span-columns(3 omega,10);
+}
+.userSpace{
+    @include span-columns(1,3);
+}
+
+.userConnexion{
+    @include span-columns(2 omega,3);
+    position:relative;
+    color:white;
+    a{
+        color:white;
+    }
+    h3{
+        display:inline-block;
+        padding:0.3em;
+    }
+    h3:hover+form, form:hover{
+        opacity:1;
+        height:auto;
+        display: block;
     }
 
+    form{
+        background-color: rgba(0,0,0,0.8);
+        padding:0.3em;
+        position:absolute;
+        display: none;
+        opacity:0;
+        transition: display  0.5s;
+    }
+}
+
+[type="text"],[type="password"]{
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius: 0.2em;
+    padding:0.4em;
+    margin-top: 0.3em;
+    color:silver;
+}
+
+input:focus{
+border: 1px solid #FF7C00;
+}
+
+.userConnexion:hover{
+    >h3{
+        background-color: rgba(0,0,0,0.8);
+    }
 }
 
 html{
+    font-family: Verdana, Geneva, sans-serif;
     a{
         color:black;
         text-decoration: none;
@@ -32,6 +83,7 @@ html{
 }
 
 nav{
+    @include span-columns(10,10);
     ul{
     margin-top: 1em;
 
@@ -42,6 +94,7 @@ nav{
                 color: white;
                 display: inline-block;
                 padding: 0.8em;
+                width:auto;
                 
             }
             a:hover{
@@ -61,10 +114,23 @@ h6      { font-size: 0.75em;}
 
 .content{
     @include container($total-columns, $mobile, $tablet, $computer, $largeComputer);
-    @include susy-grid-background;
+    //@include susy-grid-background;
     width:900px;
     margin:0 auto;
     padding: 2em 0 0;
 }
 
-h1{font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; }
+.findRace{
+    background-color: rgba(0,0,0,0.8);
+    padding: 0.5em;
+    color:white;
+
+}
+
+[type="submit"]{
+    background-color: #00C12B;
+    border:none;
+    cursor: pointer;
+}
+
+h1,h2,h3,h4,h5,h6{font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; }
