--- a/public/styles/screen.css
+++ b/public/styles/screen.css
@@ -71,61 +71,127 @@ header h1 {
   display: inline; }
   /* line 17, ../sass/screen.scss */
   header h1 a {
-    color: white; }
-/* line 21, ../sass/screen.scss */
-header .connexion {
-  width: 38.77551%;
+    color: white;
+    font-weight: bolder; }
+
+/* line 24, ../sass/screen.scss */
+.user {
+  width: 28.57143%;
   float: right;
   margin-right: 0;
   *margin-left: -1em;
   display: inline; }
 
-/* line 28, ../sass/screen.scss */
-html a {
-  color: black;
-  text-decoration: none; }
+/* line 27, ../sass/screen.scss */
+.userSpace {
+  width: 28.57143%;
+  float: left;
+  margin-right: 7.14286%;
+  display: inline; }
 
-/* line 35, ../sass/screen.scss */
-nav ul {
-  margin-top: 1em; }
-  /* line 39, ../sass/screen.scss */
-  nav ul li {
-    display: inline-block; }
-    /* line 41, ../sass/screen.scss */
-    nav ul li a {
-      color: white;
-      display: inline-block;
-      padding: 0.8em; }
-    /* line 47, ../sass/screen.scss */
-    nav ul li a:hover {
-      background-color: red;
-      color: black; }
+/* line 31, ../sass/screen.scss */
+.userConnexion {
+  width: 64.28571%;
+  float: right;
+  margin-right: 0;
+  *margin-left: -1em;
+  display: inline;
+  position: relative;
+  color: white; }
+  /* line 35, ../sass/screen.scss */
+  .userConnexion a {
+    color: white; }
+  /* line 38, ../sass/screen.scss */
+  .userConnexion h3 {
+    display: inline-block;
+    padding: 0.3em; }
+  /* line 42, ../sass/screen.scss */
+  .userConnexion h3:hover + form, .userConnexion form:hover {
+    opacity: 1;
+    height: auto;
+    display: block; }
+  /* line 48, ../sass/screen.scss */
+  .userConnexion form {
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 0.3em;
+    position: absolute;
+    display: none;
+    opacity: 0;
+    transition: display  0.5s; }
 
-/* line 55, ../sass/screen.scss */
+/* line 58, ../sass/screen.scss */
+[type="text"], [type="password"] {
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 0.2em;
+  padding: 0.4em;
+  margin-top: 0.3em;
+  color: silver; }
+
+/* line 67, ../sass/screen.scss */
+input:focus {
+  border: 1px solid #FF7C00; }
+
+/* line 72, ../sass/screen.scss */
+.userConnexion:hover > h3 {
+  background-color: rgba(0, 0, 0, 0.8); }
+
+/* line 77, ../sass/screen.scss */
+html {
+  font-family: Verdana, Geneva, sans-serif; }
+  /* line 79, ../sass/screen.scss */
+  html a {
+    color: black;
+    text-decoration: none; }
+
+/* line 85, ../sass/screen.scss */
+nav {
+  width: 100%;
+  float: left;
+  margin-right: 2.04082%;
+  display: inline; }
+  /* line 87, ../sass/screen.scss */
+  nav ul {
+    margin-top: 1em; }
+    /* line 91, ../sass/screen.scss */
+    nav ul li {
+      display: inline-block; }
+      /* line 93, ../sass/screen.scss */
+      nav ul li a {
+        color: white;
+        display: inline-block;
+        padding: 0.8em;
+        width: auto; }
+      /* line 100, ../sass/screen.scss */
+      nav ul li a:hover {
+        background-color: red;
+        color: black; }
+
+/* line 108, ../sass/screen.scss */
 h1 {
   font-size: 2em; }
 
-/* line 56, ../sass/screen.scss */
+/* line 109, ../sass/screen.scss */
 h2 {
   font-size: 1.5em; }
 
-/* line 57, ../sass/screen.scss */
+/* line 110, ../sass/screen.scss */
 h3 {
   font-size: 1.17em; }
 
-/* line 58, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 h4 {
   font-size: 1em; }
 
-/* line 59, ../sass/screen.scss */
+/* line 112, ../sass/screen.scss */
 h5 {
   font-size: 0.83em; }
 
-/* line 60, ../sass/screen.scss */
+/* line 113, ../sass/screen.scss */
 h6 {
   font-size: 0.75em; }
 
-/* line 62, ../sass/screen.scss */
+/* line 115, ../sass/screen.scss */
 .content {
   *zoom: 1;
   max-width: 49em;
@@ -134,20 +200,6 @@ h6 {
   padding-right: 1em;
   margin-left: auto;
   margin-right: auto;
-  background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(0%, rgba(100, 100, 225, 0.25)), color-stop(8.16327%, rgba(100, 100, 225, 0.25)), color-stop(8.16327%, rgba(0, 0, 0, 0)), color-stop(10.20408%, rgba(0, 0, 0, 0)), color-stop(10.20408%, rgba(100, 100, 225, 0.25)), color-stop(18.36735%, rgba(100, 100, 225, 0.25)), color-stop(18.36735%, rgba(0, 0, 0, 0)), color-stop(20.40816%, rgba(0, 0, 0, 0)), color-stop(20.40816%, rgba(100, 100, 225, 0.25)), color-stop(28.57143%, rgba(100, 100, 225, 0.25)), color-stop(28.57143%, rgba(0, 0, 0, 0)), color-stop(30.61224%, rgba(0, 0, 0, 0)), color-stop(30.61224%, rgba(100, 100, 225, 0.25)), color-stop(38.77551%, rgba(100, 100, 225, 0.25)), color-stop(38.77551%, rgba(0, 0, 0, 0)), color-stop(40.81633%, rgba(0, 0, 0, 0)), color-stop(40.81633%, rgba(100, 100, 225, 0.25)), color-stop(48.97959%, rgba(100, 100, 225, 0.25)), color-stop(48.97959%, rgba(0, 0, 0, 0)), color-stop(51.02041%, rgba(0, 0, 0, 0)), color-stop(51.02041%, rgba(100, 100, 225, 0.25)), color-stop(59.18367%, rgba(100, 100, 225, 0.25)), color-stop(59.18367%, rgba(0, 0, 0, 0)), color-stop(61.22449%, rgba(0, 0, 0, 0)), color-stop(61.22449%, rgba(100, 100, 225, 0.25)), color-stop(69.38776%, rgba(100, 100, 225, 0.25)), color-stop(69.38776%, rgba(0, 0, 0, 0)), color-stop(71.42857%, rgba(0, 0, 0, 0)), color-stop(71.42857%, rgba(100, 100, 225, 0.25)), color-stop(79.59184%, rgba(100, 100, 225, 0.25)), color-stop(79.59184%, rgba(0, 0, 0, 0)), color-stop(81.63265%, rgba(0, 0, 0, 0)), color-stop(81.63265%, rgba(100, 100, 225, 0.25)), color-stop(89.79592%, rgba(100, 100, 225, 0.25)), color-stop(89.79592%, rgba(0, 0, 0, 0)), color-stop(91.83673%, rgba(0, 0, 0, 0)), color-stop(91.83673%, rgba(100, 100, 225, 0.25)), color-stop(100%, rgba(100, 100, 225, 0.25)), color-stop(100%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0)));
-  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(100, 100, 225, 0.25) 0%, rgba(100, 100, 225, 0.25) 8.16327%, rgba(0, 0, 0, 0) 8.16327%, rgba(0, 0, 0, 0) 10.20408%, rgba(100, 100, 225, 0.25) 10.20408%, rgba(100, 100, 225, 0.25) 18.36735%, rgba(0, 0, 0, 0) 18.36735%, rgba(0, 0, 0, 0) 20.40816%, rgba(100, 100, 225, 0.25) 20.40816%, rgba(100, 100, 225, 0.25) 28.57143%, rgba(0, 0, 0, 0) 28.57143%, rgba(0, 0, 0, 0) 30.61224%, rgba(100, 100, 225, 0.25) 30.61224%, rgba(100, 100, 225, 0.25) 38.77551%, rgba(0, 0, 0, 0) 38.77551%, rgba(0, 0, 0, 0) 40.81633%, rgba(100, 100, 225, 0.25) 40.81633%, rgba(100, 100, 225, 0.25) 48.97959%, rgba(0, 0, 0, 0) 48.97959%, rgba(0, 0, 0, 0) 51.02041%, rgba(100, 100, 225, 0.25) 51.02041%, rgba(100, 100, 225, 0.25) 59.18367%, rgba(0, 0, 0, 0) 59.18367%, rgba(0, 0, 0, 0) 61.22449%, rgba(100, 100, 225, 0.25) 61.22449%, rgba(100, 100, 225, 0.25) 69.38776%, rgba(0, 0, 0, 0) 69.38776%, rgba(0, 0, 0, 0) 71.42857%, rgba(100, 100, 225, 0.25) 71.42857%, rgba(100, 100, 225, 0.25) 79.59184%, rgba(0, 0, 0, 0) 79.59184%, rgba(0, 0, 0, 0) 81.63265%, rgba(100, 100, 225, 0.25) 81.63265%, rgba(100, 100, 225, 0.25) 89.79592%, rgba(0, 0, 0, 0) 89.79592%, rgba(0, 0, 0, 0) 91.83673%, rgba(100, 100, 225, 0.25) 91.83673%, rgba(100, 100, 225, 0.25) 100%, rgba(0, 0, 0, 0) 100%, rgba(0, 0, 0, 0) 100%);
-  background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(100, 100, 225, 0.25) 0%, rgba(100, 100, 225, 0.25) 8.16327%, rgba(0, 0, 0, 0) 8.16327%, rgba(0, 0, 0, 0) 10.20408%, rgba(100, 100, 225, 0.25) 10.20408%, rgba(100, 100, 225, 0.25) 18.36735%, rgba(0, 0, 0, 0) 18.36735%, rgba(0, 0, 0, 0) 20.40816%, rgba(100, 100, 225, 0.25) 20.40816%, rgba(100, 100, 225, 0.25) 28.57143%, rgba(0, 0, 0, 0) 28.57143%, rgba(0, 0, 0, 0) 30.61224%, rgba(100, 100, 225, 0.25) 30.61224%, rgba(100, 100, 225, 0.25) 38.77551%, rgba(0, 0, 0, 0) 38.77551%, rgba(0, 0, 0, 0) 40.81633%, rgba(100, 100, 225, 0.25) 40.81633%, rgba(100, 100, 225, 0.25) 48.97959%, rgba(0, 0, 0, 0) 48.97959%, rgba(0, 0, 0, 0) 51.02041%, rgba(100, 100, 225, 0.25) 51.02041%, rgba(100, 100, 225, 0.25) 59.18367%, rgba(0, 0, 0, 0) 59.18367%, rgba(0, 0, 0, 0) 61.22449%, rgba(100, 100, 225, 0.25) 61.22449%, rgba(100, 100, 225, 0.25) 69.38776%, rgba(0, 0, 0, 0) 69.38776%, rgba(0, 0, 0, 0) 71.42857%, rgba(100, 100, 225, 0.25) 71.42857%, rgba(100, 100, 225, 0.25) 79.59184%, rgba(0, 0, 0, 0) 79.59184%, rgba(0, 0, 0, 0) 81.63265%, rgba(100, 100, 225, 0.25) 81.63265%, rgba(100, 100, 225, 0.25) 89.79592%, rgba(0, 0, 0, 0) 89.79592%, rgba(0, 0, 0, 0) 91.83673%, rgba(100, 100, 225, 0.25) 91.83673%, rgba(100, 100, 225, 0.25) 100%, rgba(0, 0, 0, 0) 100%, rgba(0, 0, 0, 0) 100%);
-  background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(100, 100, 225, 0.25) 0%, rgba(100, 100, 225, 0.25) 8.16327%, rgba(0, 0, 0, 0) 8.16327%, rgba(0, 0, 0, 0) 10.20408%, rgba(100, 100, 225, 0.25) 10.20408%, rgba(100, 100, 225, 0.25) 18.36735%, rgba(0, 0, 0, 0) 18.36735%, rgba(0, 0, 0, 0) 20.40816%, rgba(100, 100, 225, 0.25) 20.40816%, rgba(100, 100, 225, 0.25) 28.57143%, rgba(0, 0, 0, 0) 28.57143%, rgba(0, 0, 0, 0) 30.61224%, rgba(100, 100, 225, 0.25) 30.61224%, rgba(100, 100, 225, 0.25) 38.77551%, rgba(0, 0, 0, 0) 38.77551%, rgba(0, 0, 0, 0) 40.81633%, rgba(100, 100, 225, 0.25) 40.81633%, rgba(100, 100, 225, 0.25) 48.97959%, rgba(0, 0, 0, 0) 48.97959%, rgba(0, 0, 0, 0) 51.02041%, rgba(100, 100, 225, 0.25) 51.02041%, rgba(100, 100, 225, 0.25) 59.18367%, rgba(0, 0, 0, 0) 59.18367%, rgba(0, 0, 0, 0) 61.22449%, rgba(100, 100, 225, 0.25) 61.22449%, rgba(100, 100, 225, 0.25) 69.38776%, rgba(0, 0, 0, 0) 69.38776%, rgba(0, 0, 0, 0) 71.42857%, rgba(100, 100, 225, 0.25) 71.42857%, rgba(100, 100, 225, 0.25) 79.59184%, rgba(0, 0, 0, 0) 79.59184%, rgba(0, 0, 0, 0) 81.63265%, rgba(100, 100, 225, 0.25) 81.63265%, rgba(100, 100, 225, 0.25) 89.79592%, rgba(0, 0, 0, 0) 89.79592%, rgba(0, 0, 0, 0) 91.83673%, rgba(100, 100, 225, 0.25) 91.83673%, rgba(100, 100, 225, 0.25) 100%, rgba(0, 0, 0, 0) 100%, rgba(0, 0, 0, 0) 100%);
-  background-image: linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(100, 100, 225, 0.25) 0%, rgba(100, 100, 225, 0.25) 8.16327%, rgba(0, 0, 0, 0) 8.16327%, rgba(0, 0, 0, 0) 10.20408%, rgba(100, 100, 225, 0.25) 10.20408%, rgba(100, 100, 225, 0.25) 18.36735%, rgba(0, 0, 0, 0) 18.36735%, rgba(0, 0, 0, 0) 20.40816%, rgba(100, 100, 225, 0.25) 20.40816%, rgba(100, 100, 225, 0.25) 28.57143%, rgba(0, 0, 0, 0) 28.57143%, rgba(0, 0, 0, 0) 30.61224%, rgba(100, 100, 225, 0.25) 30.61224%, rgba(100, 100, 225, 0.25) 38.77551%, rgba(0, 0, 0, 0) 38.77551%, rgba(0, 0, 0, 0) 40.81633%, rgba(100, 100, 225, 0.25) 40.81633%, rgba(100, 100, 225, 0.25) 48.97959%, rgba(0, 0, 0, 0) 48.97959%, rgba(0, 0, 0, 0) 51.02041%, rgba(100, 100, 225, 0.25) 51.02041%, rgba(100, 100, 225, 0.25) 59.18367%, rgba(0, 0, 0, 0) 59.18367%, rgba(0, 0, 0, 0) 61.22449%, rgba(100, 100, 225, 0.25) 61.22449%, rgba(100, 100, 225, 0.25) 69.38776%, rgba(0, 0, 0, 0) 69.38776%, rgba(0, 0, 0, 0) 71.42857%, rgba(100, 100, 225, 0.25) 71.42857%, rgba(100, 100, 225, 0.25) 79.59184%, rgba(0, 0, 0, 0) 79.59184%, rgba(0, 0, 0, 0) 81.63265%, rgba(100, 100, 225, 0.25) 81.63265%, rgba(100, 100, 225, 0.25) 89.79592%, rgba(0, 0, 0, 0) 89.79592%, rgba(0, 0, 0, 0) 91.83673%, rgba(100, 100, 225, 0.25) 91.83673%, rgba(100, 100, 225, 0.25) 100%, rgba(0, 0, 0, 0) 100%, rgba(0, 0, 0, 0) 100%);
-  background-position: left top;
-  -webkit-background-origin: content;
-  -moz-background-origin: content;
-  -ms-background-origin: content-box;
-  -o-background-origin: content-box;
-  background-origin: content-box;
-  -webkit-background-clip: content-box;
-  -moz-background-clip: content-box;
-  background-clip: content-box;
   width: 900px;
   margin: 0 auto;
   padding: 2em 0 0; }
@@ -157,22 +209,34 @@ h6 {
     display: table;
     clear: both; }
   @media (min-width: 24em) {
-    /* line 62, ../sass/screen.scss */
+    /* line 115, ../sass/screen.scss */
     .content {
       max-width: 24em; } }
   @media (min-width: 39em) {
-    /* line 62, ../sass/screen.scss */
+    /* line 115, ../sass/screen.scss */
     .content {
       max-width: 39em; } }
   @media (min-width: 55em) {
-    /* line 62, ../sass/screen.scss */
+    /* line 115, ../sass/screen.scss */
     .content {
       max-width: 59em; } }
   @media (min-width: 65em) {
-    /* line 62, ../sass/screen.scss */
+    /* line 115, ../sass/screen.scss */
     .content {
       max-width: 69em; } }
 
-/* line 70, ../sass/screen.scss */
-h1 {
+/* line 123, ../sass/screen.scss */
+.findRace {
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 0.5em;
+  color: white; }
+
+/* line 130, ../sass/screen.scss */
+[type="submit"] {
+  background-color: #00C12B;
+  border: none;
+  cursor: pointer; }
+
+/* line 136, ../sass/screen.scss */
+h1, h2, h3, h4, h5, h6 {
   font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; }
