--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -22,6 +22,11 @@ header{
     }
 }
 
+.hidden{
+    position:absolute;
+    display:none;
+}
+
 .user{
     @include span-columns(4 omega,10);
 }
@@ -55,6 +60,7 @@ header{
         opacity:1;
         height:auto;
         display: block;
+        box-shadow: 0px 0px 8px;
     }
 
     form{
@@ -101,30 +107,6 @@ html{
     }
 }
 
-nav{
-    @include span-columns(10,10);
-    ul{
-    margin-top: 1em;
-
-
-        li{
-            display: inline-block;
-            a{
-                color: white;
-                display: inline-block;
-                padding: 0.8em;
-                width:auto;
-                border:none;
-                
-            }
-            a:hover{
-                background-color: red;
-                color:black;
-            }
-        }
-    }
-}
-
 h1      { font-size: 2em;}
 h2      { font-size: 1.5em;}
 h3      { font-size: 1.17em;}
@@ -136,13 +118,6 @@ h6      { font-size: 0.75em;}
     @include container($total-columns, $mobile, $tablet, $computer, $largeComputer);
     //@include susy-grid-background;
     padding-top: 2em;
-}
-
-.findRace{
-    background-color: rgba(0,0,0,0.8);
-    padding: 0.5em;
-    color:white;
-    margin-bottom: 15em;
 }
 
 [type="submit"]{
@@ -163,10 +138,45 @@ box-shadow: 0 0.5em 0 #01938A;
 
 h1,h2,h3,h4,h5,h6{font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; }
 
+/////////----------------------------------------------------------------------------------
+/////////Menu de navigation  --------------------------------------------------------------
+/////////----------------------------------------------------------------------------------
 
-/////////
-/////////Liste des course
-/////////
+
+nav{
+
+    ul{
+    color:black;
+    @include span-columns(10,10);
+    margin-top: 3em;
+    color:black;
+
+
+        li{
+            display: inline-block;
+            width:auto;
+            background-color: white;
+            a{
+                display: block;
+                padding: 0.8em;
+                border:none;
+                
+            }
+            a:hover{
+                background-color: red;
+                color:black;
+            }
+        }
+    }
+}
+
+
+
+
+
+/////////----------------------------------------------------------------------------------
+/////////Liste des courses ----------------------------------------------------------------
+/////////----------------------------------------------------------------------------------
 
 h2{
     margin-left: -0.6em;
@@ -185,7 +195,7 @@ h2{
     ul a{
         border:none;
         padding: 0.6em;
-        box-sizing: border-box;
+        @include box-sizing(border-box);
         color:white;
         margin-bottom: 2.04082%;
         background-color: black;
@@ -235,3 +245,61 @@ h2{
 section{
     margin-bottom: 3em;
 }
+
+
+/////////----------------------------------------------------------------------------------
+/////////Formulaire de recherche de course ------------------------------------------------
+/////////----------------------------------------------------------------------------------
+
+.findRace{
+    background-color: rgba(0,0,0,0.8);
+    color:white;
+    margin-bottom: 5em;
+    padding: 1.5em;
+    form{
+        padding-left: 10%;
+    }
+    h2{
+        border:none;
+        margin:0 0 1em;
+        padding:0 0 0.6em;
+        text-align: center;
+    }
+    label{
+        @include span-columns(1,4);
+        text-align: right;
+        padding:0.3em;
+        margin-bottom: 0.6em;
+        @include box-sizing(border-box);
+    }
+    select{
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        margin:0;
+        font-size: 1em;
+        border:none;
+        border-radius: 0.5em;
+        box-sizing: border-box;
+        @include span-columns(3 omega,4);
+        padding:0.5em;
+        background: url(../img/down_arrow_select.jpg) no-repeat right #ddd;
+        margin-bottom: 0.6em;
+    }
+    input{
+        @include span-columns(3 omega ,4);
+        margin-top: 0;
+    }
+
+}
+
+.left{
+    @include span-columns(4,10);
+}
+
+.right{
+    @include span-columns(4,10);
+}
+
+
+
+
