--- a/public/styles/screen.css
+++ b/public/styles/screen.css
@@ -76,6 +76,11 @@ header h1 {
     border: none; }
 
 /* line 25, ../sass/screen.scss */
+.hidden {
+  position: absolute;
+  display: none; }
+
+/* line 30, ../sass/screen.scss */
 .user {
   width: 38.77551%;
   float: right;
@@ -83,7 +88,7 @@ header h1 {
   *margin-left: -1em;
   display: inline; }
 
-/* line 28, ../sass/screen.scss */
+/* line 33, ../sass/screen.scss */
 .userSpace {
   width: 21.05263%;
   float: left;
@@ -92,7 +97,7 @@ header h1 {
   border-right: 0.3em solid white;
   box-sizing: border-box; }
 
-/* line 34, ../sass/screen.scss */
+/* line 39, ../sass/screen.scss */
 .userConnexion {
   width: 73.68421%;
   float: right;
@@ -101,31 +106,32 @@ header h1 {
   display: inline;
   position: relative;
   color: black; }
-  /* line 38, ../sass/screen.scss */
+  /* line 43, ../sass/screen.scss */
   .userConnexion a {
     color: black;
     font-size: 0.8em;
     margin-top: 0.4em; }
-  /* line 43, ../sass/screen.scss */
+  /* line 48, ../sass/screen.scss */
   .userConnexion input {
     width: 85.71429%;
     float: left;
     margin-right: 7.14286%;
     display: inline;
     box-sizing: border-box; }
-  /* line 47, ../sass/screen.scss */
+  /* line 52, ../sass/screen.scss */
   .userConnexion h3 {
     color: white;
     display: inline-block;
     padding: 0.3em;
     border-top-left-radius: 0.5em;
     border-top-right-radius: 0.5em; }
-  /* line 54, ../sass/screen.scss */
+  /* line 59, ../sass/screen.scss */
   .userConnexion h3:hover + form, .userConnexion form:hover {
     opacity: 1;
     height: auto;
-    display: block; }
-  /* line 60, ../sass/screen.scss */
+    display: block;
+    box-shadow: 0px 0px 8px; }
+  /* line 66, ../sass/screen.scss */
   .userConnexion form {
     background-color: white;
     padding: 0.6em;
@@ -134,7 +140,7 @@ header h1 {
     opacity: 0;
     transition: display  0.5s; }
 
-/* line 70, ../sass/screen.scss */
+/* line 76, ../sass/screen.scss */
 [type="text"], [type="password"] {
   background-color: transparent;
   border: 1px solid black;
@@ -143,78 +149,54 @@ header h1 {
   margin-top: 0.6em;
   color: black; }
 
-/* line 79, ../sass/screen.scss */
+/* line 85, ../sass/screen.scss */
 input:focus {
   border: 1px solid #FF7C00; }
 
-/* line 84, ../sass/screen.scss */
+/* line 90, ../sass/screen.scss */
 .userConnexion:hover > h3 {
   background-color: white;
   cursor: default;
   color: black; }
 
-/* line 91, ../sass/screen.scss */
+/* line 97, ../sass/screen.scss */
 html {
   font-family: Verdana, Geneva, sans-serif;
   line-height: 1.5em; }
-  /* line 94, ../sass/screen.scss */
+  /* line 100, ../sass/screen.scss */
   html a {
     color: black;
     text-decoration: none;
     border-bottom: 1px dotted black; }
-  /* line 99, ../sass/screen.scss */
+  /* line 105, ../sass/screen.scss */
   html a:hover {
     color: #5DC8CD; }
 
-/* line 104, ../sass/screen.scss */
-nav {
-  width: 100%;
-  float: left;
-  margin-right: 2.04082%;
-  display: inline; }
-  /* line 106, ../sass/screen.scss */
-  nav ul {
-    margin-top: 1em; }
-    /* line 110, ../sass/screen.scss */
-    nav ul li {
-      display: inline-block; }
-      /* line 112, ../sass/screen.scss */
-      nav ul li a {
-        color: white;
-        display: inline-block;
-        padding: 0.8em;
-        width: auto;
-        border: none; }
-      /* line 120, ../sass/screen.scss */
-      nav ul li a:hover {
-        background-color: red;
-        color: black; }
-
-/* line 128, ../sass/screen.scss */
+/* line 110, ../sass/screen.scss */
 h1 {
   font-size: 2em; }
 
-/* line 129, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 h2 {
   font-size: 1.5em; }
 
-/* line 130, ../sass/screen.scss */
+/* line 112, ../sass/screen.scss */
 h3 {
   font-size: 1.17em; }
 
-/* line 131, ../sass/screen.scss */
+/* line 113, ../sass/screen.scss */
 h4 {
   font-size: 1em; }
 
-/* line 132, ../sass/screen.scss */
+/* line 114, ../sass/screen.scss */
 h5 {
   font-size: 0.83em; }
 
-/* line 133, ../sass/screen.scss */
+/* line 115, ../sass/screen.scss */
 h6 {
   font-size: 0.75em; }
 
-/* line 135, ../sass/screen.scss */
+/* line 117, ../sass/screen.scss */
 .content {
   *zoom: 1;
   max-width: 49em;
@@ -230,30 +212,23 @@ h6 {
     display: table;
     clear: both; }
   @media (min-width: 24em) {
-    /* line 135, ../sass/screen.scss */
+    /* line 117, ../sass/screen.scss */
     .content {
       max-width: 24em; } }
   @media (min-width: 44em) {
-    /* line 135, ../sass/screen.scss */
+    /* line 117, ../sass/screen.scss */
     .content {
       max-width: 44em; } }
   @media (min-width: 55em) {
-    /* line 135, ../sass/screen.scss */
+    /* line 117, ../sass/screen.scss */
     .content {
       max-width: 59em; } }
   @media (min-width: 65em) {
-    /* line 135, ../sass/screen.scss */
+    /* line 117, ../sass/screen.scss */
     .content {
       max-width: 69em; } }
 
-/* line 141, ../sass/screen.scss */
-.findRace {
-  background-color: rgba(0, 0, 0, 0.8);
-  padding: 0.5em;
-  color: white;
-  margin-bottom: 15em; }
-
-/* line 148, ../sass/screen.scss */
+/* line 123, ../sass/screen.scss */
 [type="submit"] {
   background-color: #FF7600;
   border: none;
@@ -266,90 +241,183 @@ h6 {
   color: white;
   text-shadow: 0 1px 1px black; }
 
-/* line 160, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 [type="submit"]:hover {
   box-shadow: 0 0.5em 0 #01938A; }
 
-/* line 164, ../sass/screen.scss */
+/* line 139, ../sass/screen.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif; }
 
-/* line 171, ../sass/screen.scss */
+/* line 148, ../sass/screen.scss */
+nav ul {
+  color: black;
+  width: 100%;
+  float: left;
+  margin-right: 2.04082%;
+  display: inline;
+  margin-top: 3em;
+  color: black; }
+  /* line 155, ../sass/screen.scss */
+  nav ul li {
+    display: inline-block;
+    width: auto;
+    background-color: white; }
+    /* line 159, ../sass/screen.scss */
+    nav ul li a {
+      display: block;
+      padding: 0.8em;
+      border: none; }
+    /* line 165, ../sass/screen.scss */
+    nav ul li a:hover {
+      background-color: red;
+      color: black; }
+
+/* line 181, ../sass/screen.scss */
 h2 {
   margin-left: -0.6em;
   border-left: 0.6em solid #FF7600;
   padding: 0.5em 0; }
 
-/* line 178, ../sass/screen.scss */
+/* line 188, ../sass/screen.scss */
 .racesList h3 {
   background-color: #01939A;
   color: white;
   text-align: center;
   padding: 0.6em;
   margin: 1em 0 0.5em; }
-/* line 185, ../sass/screen.scss */
+/* line 195, ../sass/screen.scss */
 .racesList ul a {
   border: none;
   padding: 0.6em;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   color: white;
   margin-bottom: 2.04082%;
   background-color: black;
   height: 100px;
   transition: background-color 0.5s; }
-  /* line 194, ../sass/screen.scss */
+  /* line 204, ../sass/screen.scss */
   .racesList ul a h4 {
     text-align: center; }
-/* line 198, ../sass/screen.scss */
+/* line 208, ../sass/screen.scss */
 .racesList ul a:hover {
   background-color: #FF7600; }
 
-/* line 204, ../sass/screen.scss */
+/* line 214, ../sass/screen.scss */
 .sevenFirst a:first-child {
   width: 38.77551%;
   float: left;
   margin-right: 2.04082%;
   display: inline;
   height: 222px; }
-/* line 209, ../sass/screen.scss */
+/* line 219, ../sass/screen.scss */
 .sevenFirst a {
   width: 18.36735%;
   float: left;
   margin-right: 2.04082%;
   display: inline; }
-  /* line 211, ../sass/screen.scss */
+  /* line 221, ../sass/screen.scss */
   .sevenFirst a:nth-child(3n) {
     float: right;
     margin-right: 0;
     *margin-left: -1em;
     display: inline; }
 
-/* line 217, ../sass/screen.scss */
+/* line 227, ../sass/screen.scss */
 .others a:nth-child(4) {
   width: 38.77551%;
   float: left;
   margin-right: 2.04082%;
   display: inline;
   height: 222px; }
-/* line 222, ../sass/screen.scss */
+/* line 232, ../sass/screen.scss */
 .others a {
   width: 18.36735%;
   float: left;
   margin-right: 2.04082%;
   display: inline; }
-  /* line 224, ../sass/screen.scss */
+  /* line 234, ../sass/screen.scss */
   .others a:nth-child(4n) {
     float: right;
     margin-right: 0;
     *margin-left: -1em;
     display: inline; }
 
-/* line 229, ../sass/screen.scss */
+/* line 239, ../sass/screen.scss */
 .month:after {
   content: "";
   display: block;
   clear: both; }
 
-/* line 235, ../sass/screen.scss */
+/* line 245, ../sass/screen.scss */
 section {
   margin-bottom: 3em; }
+
+/* line 254, ../sass/screen.scss */
+.findRace {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  margin-bottom: 5em;
+  padding: 1.5em; }
+  /* line 259, ../sass/screen.scss */
+  .findRace form {
+    padding-left: 10%; }
+  /* line 262, ../sass/screen.scss */
+  .findRace h2 {
+    border: none;
+    margin: 0 0 1em;
+    padding: 0 0 0.6em;
+    text-align: center; }
+  /* line 268, ../sass/screen.scss */
+  .findRace label {
+    width: 21.05263%;
+    float: left;
+    margin-right: 5.26316%;
+    display: inline;
+    text-align: right;
+    padding: 0.3em;
+    margin-bottom: 0.6em;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; }
+  /* line 275, ../sass/screen.scss */
+  .findRace select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    margin: 0;
+    font-size: 1em;
+    border: none;
+    border-radius: 0.5em;
+    box-sizing: border-box;
+    width: 73.68421%;
+    float: right;
+    margin-right: 0;
+    *margin-left: -1em;
+    display: inline;
+    padding: 0.5em;
+    background: url(../img/down_arrow_select.jpg) no-repeat right #dddddd;
+    margin-bottom: 0.6em; }
+  /* line 288, ../sass/screen.scss */
+  .findRace input {
+    width: 73.68421%;
+    float: right;
+    margin-right: 0;
+    *margin-left: -1em;
+    display: inline;
+    margin-top: 0; }
+
+/* line 295, ../sass/screen.scss */
+.left {
+  width: 38.77551%;
+  float: left;
+  margin-right: 2.04082%;
+  display: inline; }
+
+/* line 299, ../sass/screen.scss */
+.right {
+  width: 38.77551%;
+  float: left;
+  margin-right: 2.04082%;
+  display: inline; }
