--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -18,6 +18,8 @@ header{
             color:white;
             font-weight: bolder;
             border:none;
+            display:inline-block;
+            padding:1em;
         }
     }
 }
@@ -27,8 +29,15 @@ header{
     display:none;
 }
 
+.top:after{
+    content:"";
+    display:block;
+    clear:both;
+}
+
 .user{
     @include span-columns(4 omega,10);
+    padding-top:1em;
 }
 .userSpace{
     @include span-columns(1,4);
@@ -50,16 +59,18 @@ header{
         box-sizing: border-box;
     }
     h3{
-        color:white;
-        display:inline-block;
+        background-color: white;
+        cursor: default;
+        color:black;
         padding:0.3em;
-        border-top-left-radius: 0.5em;
-        border-top-right-radius: 0.5em;
+        display:inline-block;
+        border-radius: 0.5em;
     }
     h3:hover+form, form:hover{
         opacity:1;
         height:auto;
         display: block;
+        padding-left: 12%;
         box-shadow: 0px 0px 8px;
     }
 
@@ -69,7 +80,6 @@ header{
         position:absolute;
         display: none;
         opacity:0;
-        transition: display  0.5s;
     }
 }
 
@@ -88,9 +98,10 @@ border: 1px solid #FF7C00;
 
 .userConnexion:hover{
     >h3{
-        background-color: white;
-        cursor: default;
-        color:black;
+        border-top-left-radius: 0.5em;
+        border-top-right-radius: 0.5em;
+        border-bottom-left-radius: 0em;
+        border-bottom-right-radius: 0em;
     }
 }
 
@@ -147,24 +158,29 @@ nav{
 
     ul{
     color:black;
-    @include span-columns(10,10);
-    margin-top: 3em;
+    width:100%;
     color:black;
+    margin:1.5em 0;
 
-
+        li:first-child{
+            border:none;
+        }
         li{
             display: inline-block;
-            width:auto;
+            @include box-sizing(border-box);
+            width:16.6666667%;
             background-color: white;
+            border-left: 0.2em solid #FF7600;
             a{
+                text-align: center;
                 display: block;
                 padding: 0.8em;
                 border:none;
                 
             }
             a:hover{
-                background-color: red;
-                color:black;
+                background-color: #01938A;
+                color:white;
             }
         }
     }
@@ -254,10 +270,9 @@ section{
 .findRace{
     background-color: rgba(0,0,0,0.8);
     color:white;
-    margin-bottom: 5em;
     padding: 1.5em;
     form{
-        padding-left: 10%;
+        //padding-left: 10%;
     }
     h2{
         border:none;
@@ -266,7 +281,7 @@ section{
         text-align: center;
     }
     label{
-        @include span-columns(1,4);
+        @include span-columns(1.5,4.5);
         text-align: right;
         padding:0.3em;
         margin-bottom: 0.6em;
@@ -280,24 +295,24 @@ section{
         border:none;
         border-radius: 0.5em;
         box-sizing: border-box;
-        @include span-columns(3 omega,4);
+        @include span-columns(3 omega,4.5);
         padding:0.5em;
         background: url(../img/down_arrow_select.jpg) no-repeat right #ddd;
         margin-bottom: 0.6em;
     }
     input{
-        @include span-columns(3 omega ,4);
+        @include span-columns(3 omega ,4.5);
         margin-top: 0;
     }
 
 }
 
 .left{
-    @include span-columns(4,10);
+    @include span-columns(5,10);
 }
 
 .right{
-    @include span-columns(4,10);
+    @include span-columns(5 omega,10);
 }
 
 
